--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-diff-view": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "swr": "^2.0.1",
     "yaml": "^2.2.1"
   },
