--- a/backend/package.json
+++ b/backend/package.json
@@ -28,9 +28,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "simple-git": "^3.15.1",
-    "yaml": "^2.2.1"
-  },
+    "simple-git": "^3.15.1"
+    },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
